# Scintillator

./: .gitignore  .gitmodules  .travis.yml  .travis_symbol_upload_key.json.enc  .travis_symbol_upload_key.json.gpg  BUILDING.md  Building-Scintillator.md  CMakeLists.txt  README.md  REFERENCES.md  Scintillator.quark
.github/: pull_request_template.md
.travis/: before-deploy-linux.sh  before-deploy-osx.sh  before-deploy-windows.sh  before-install-linux.sh  before-install-osx.sh  before-install-windows.sh  before-script-linux.sh  before-script-osx.sh  before-script-windows.sh  script-linux.sh  script-osx.sh  script-windows.sh
classes/: BasicOpsVGen.sc  BuiltIn.sc  FrameBuffer.sc  GPUBuffer.sc  ImageBuffer.sc  InOut.sc  Intrinsics.sc  Sampler.sc  ScinImageBuffer.sc  ScinIntrinsics.sc  ScinNode.sc  ScinServer.sc  ScinServerInstaller.sc  ScinServerStatusPoller.sc  ScinShape.sc  ScinTween.sc  Scinth.sc  ScinthDef.sc  Shape.sc  VBufIO.sc  VGen.sc  VOsc.sc  VSampler.sc  VSinOsc.sc  Vectors.sc  VideoInOut.sc
scinthdefs/: README.md  Test.yaml
src/: Async.cpp  Async.hpp  CMakeLists.txt  Compositor.cpp  Compositor.hpp  FileSystem.hpp  LogLevels.cpp  LogLevels.hpp  Logger.cpp  Logger.hpp  OscCommand.h.in  OscCommand.hpp.in  OscHandler.cpp  OscHandler.hpp  Scinth.cpp  Scinth.hpp  ScinthDef.cpp  ScinthDef.hpp  ScinthDefManager.cpp  ScinthDefManager.hpp  ScinthDefManager_unittests.cpp  VGen.cpp  VGen.hpp  VGenInstance.cpp  VGenInstance.hpp  VGenManager.cpp  VGenManager.hpp  VGenManager_unittests.cpp  Version.h.in  run_unittests.cpp  scinsynth.cc  scinsynth.cpp  vulkan_device.cc  vulkan_device.h  vulkan_instance.cc  vulkan_instance.h  vulkan_swap_chain.cc  vulkan_swap_chain.h  vulkan_window.cc  vulkan_window.h
src/audio/: Ingress.cpp  Ingress.hpp  PortAudio.cpp  PortAudio.hpp
src/av/: AVIncludes.hpp  Buffer.cpp  Buffer.hpp  BufferPool.cpp  BufferPool.hpp  CodecChooser.cpp  CodecChooser.hpp  Context.cpp  Context.hpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  Frame.cpp  Frame.hpp  ImageDecoder.cpp  ImageDecoder.hpp  ImageEncoder.cpp  ImageEncoder.hpp  Packet.cpp  Packet.hpp
src/base/: AbstractSampler.cpp  AbstractSampler.hpp  AbstractSampler_unittests.cpp  AbstractScinthDef.cpp  AbstractScinthDef.hpp  AbstractScinthDef_unittests.cpp  AbstractTween.cpp  AbstractTween.hpp  AbstractVGen.cpp  AbstractVGen.hpp  AbstractVGen_unittests.cpp  Archetypes.cpp  Archetypes.hpp  Archetypes_unittests.cpp  FileSystem.hpp  GTestIncludes.hpp  Intrinsic.cpp.in  Intrinsic.hpp  Manifest.cpp  Manifest.hpp  Manifest_unittests.cpp  Parameter.cpp  Parameter.hpp  RenderOptions.cpp  RenderOptions.hpp  Shape.cpp  Shape.hpp  Shape_unittests.cpp  Tween.cpp  Tween.hpp  VGen.cpp  VGen.hpp  VGen_unittests.cpp
src/comp/: Async.cpp  Async.hpp  AudioStager.cpp  AudioStager.hpp  Canvas.cpp  Canvas.hpp  Compositor.cpp  Compositor.hpp  FrameContext.cpp  FrameContext.hpp  FrameTimer.cpp  FrameTimer.hpp  Group.cpp  Group.hpp  ImageMap.cpp  ImageMap.hpp  Logger.cpp  Logger.hpp  Node.cpp  Node.hpp  Offscreen.cpp  Offscreen.hpp  Pipeline.cpp  Pipeline.hpp  RenderSync.cpp  RenderSync.hpp  RootNode.cpp  RootNode.hpp  SamplerFactory.cpp  SamplerFactory.hpp  Scinth.cpp  Scinth.hpp  ScinthDef.cpp  ScinthDef.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  StageManager.cpp  StageManager.hpp  Swapchain.cpp  Swapchain.hpp  (+2 more)
src/core/: AbstractSampler.cpp  AbstractSampler.hpp  AbstractSampler_unittests.cpp  AbstractScinthDef.cpp  AbstractScinthDef.hpp  AbstractScinthDef_unittests.cpp  AbstractVGen.cpp  AbstractVGen.hpp  AbstractVGen_unittests.cpp  Archetypes.cpp  Archetypes.hpp  Archetypes_unittests.cpp  FileSystem.hpp  Intrinsic.cpp.in  Intrinsic.hpp  LogLevels.cpp  LogLevels.hpp  Manifest.cpp  Manifest.hpp  Manifest_unittests.cpp  Parameter.cpp  Parameter.hpp  ScinthDefParser.cpp  ScinthDefParser.hpp  ScinthDefParser_unittests.cpp  Shape.cpp  Shape.hpp  Types.hpp  VGen.cpp  VGen.hpp  VGen_unittests.cpp
src/doc/: Building-scinsynth.md  Doxyfile.in  DoxygenLayout.xml  Graphics-Pipeline.md  Memory-Model.md  References-and-Acknowledgements.md  Render-Scheduler.md  Scinth-Generation.md  index.md
src/infra/: CrashReporter.cpp  CrashReporter.hpp  Logger.cpp  Logger.hpp  Version.hpp.in
src/linux/: AppRun  scinsynth.desktop.in
src/linux/share/vulkan/explicit_layer.d/: VkLayer_khronos_validation.json
src/macos/Resources/: AppIcon.icns
src/macos/Resources/vulkan/explicit_layer.d/: VkLayer_khronos_validation.json
src/macos/Resources/vulkan/icd.d/: vk_swiftshader_icd.json
src/osc/: Address.cpp  Address.hpp  BlobMessage.cpp  BlobMessage.hpp  Dispatcher.cpp  Dispatcher.hpp  LOIncludes.hpp
src/osc/commands/: AdvanceFrame.cpp  AdvanceFrame.hpp  Command.cpp.in  Command.hpp  CreateCrashReport.cpp  CreateCrashReport.hpp  DefFree.cpp  DefFree.hpp  DefLoad.cpp  DefLoad.hpp  DefLoadDir.cpp  DefLoadDir.hpp  DefReceive.cpp  DefReceive.hpp  DumpOSC.cpp  DumpOSC.hpp  Echo.cpp  Echo.hpp  GroupDeepFree.cpp  GroupDeepFree.hpp  GroupDumpTree.cpp  GroupDumpTree.hpp  GroupFreeAll.cpp  GroupFreeAll.hpp  GroupHead.cpp  GroupHead.hpp  GroupNew.cpp  GroupNew.hpp  GroupQueryTree.cpp  GroupQueryTree.hpp  GroupTail.cpp  GroupTail.hpp  ImageBufferAllocRead.cpp  ImageBufferAllocRead.hpp  ImageBufferQuery.cpp  ImageBufferQuery.hpp  ImageBufferReadImage.cpp  ImageBufferReadImage.hpp  LogAppend.cpp  LogAppend.hpp  (+36 more)
src/vulkan/: Buffer.cpp  Buffer.hpp  Canvas.cpp  Canvas.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  DeviceChooser.cpp  DeviceChooser.hpp  DeviceInfo.cpp  DeviceInfo.hpp  FrameTimer.cpp  FrameTimer.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageSet.cpp  ImageSet.hpp  Images.cpp  Images.hpp  Instance.cpp  Instance.hpp  Offscreen.cpp  Offscreen.hpp  Pipeline.cpp  Pipeline.hpp  RenderSync.cpp  RenderSync.hpp  Sampler.cpp  Sampler.hpp  SamplerFactory.cpp  SamplerFactory.hpp  Shader.cpp  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  (+35 more)
tests/: TestScinthDef.sc  TestVGen.sc
tools/: clang-format.py  code-sign-macos.py  compare-test-images.py  fetch-binary-deps.py  (+11 more)
(+97 files in other folders)
